# eee

./: README.md
backend/: pyproject.toml
backend/app/: auth.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.tsx
frontend/src/: App.tsx  index.css  output.css
frontend/src/utils/: axiosConfig.ts
